--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 /*header*/
 .container_nav_bar {
     position: fixed;
@@ -202,10 +207,13 @@
     z-index: 9;
 }
 .container_logout_verify.open{
-    display: block;
+    display: flex;
+    justify-content: center;
 }
 .js-logout-container {
     margin-top: 12%;
+    width: 600px;
+    height: 220px;
     background-color: #ffff;
     box-shadow: 0 0 60px 20px #a98fd9;
     padding: 2% 2% 4% 2%;
@@ -270,10 +278,24 @@
 .not_save {
     display: block;
 }
-
+/* Edit profile*/
+.container_profile {
+    margin-top: 6%;
+    justify-content: center;
+}
 /* History and Bookmark */
 .HisBook_container{
-    margin-top: 6%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    box-shadow: 0px 0px 22px 0 #a98fd9;
+    margin: 6% 24% 0 24%;
+}
+.header_HisBook img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin: 28px;
 }
 .HisBook_edit_btn {
     font-size: 30px;
@@ -313,14 +335,14 @@
     border-bottom: 6px solid #b7a9d0;
 }
 .fromRightToLeft.active {
-    animation: rightLeft ease 0.7s;
+    animation: rightLeft ease 0.5s;
 }
 .fromLeftToRight.active {
-    animation: leftRight ease 0.7s;
+    animation: leftRight ease 0.5s;
 }
 @keyframes rightLeft {
     from {
-        transform: translateX(430px)
+        transform: translateX(100%)
     }
     to {
         transform: translateX(0)
@@ -328,7 +350,7 @@
 }
 @keyframes leftRight {
     from {
-        transform: translateX(-430px)
+        transform: translateX(-100%)
     }
     to {
         transform: translateX(0)
@@ -384,9 +406,20 @@
         left: 80%;
     }
     .options_account_list {
-        width: 42%;
+        width: 46%;
         right: 80%;
         top: 125%;
+        animation: modalShowOut ease 0.6s;
+    }
+    @keyframes modalShowOut {
+        from {
+            opacity: 0;
+            right: 0;
+        }
+        to {
+            opacity: 1;
+            right: 80%;
+        }
     }
     .options_account_list::after {
         display: none;
@@ -408,10 +441,21 @@
     }
     .container_logout_verify .row {
         margin-top: 20%;
+        animation: LogoutVerifyShowOut ease 0.9s
+    }
+    @keyframes LogoutVerifyShowOut {
+        from {
+            opacity: 0;
+            translateY: transform(-140px);
+        }
+        to {
+            opacity: 1;
+            translateY: transform(0);
+        }
     }
     .js-logout-container {
         width: 86%;
-        margin-top: 30%;
+        margin-top: 40%;
     }
     .js-logout-container .row {
         justify-content: space-evenly;
@@ -465,11 +509,18 @@
     .login_container {
         width: 76%;
     }
+    /* Edit profile */
+    .container_profile {
+        margin: 32% 0 16% 0;
+    }
     /* profile */
+    .header_HisBook img {
+        margin: 28px 10px;
+    }
     .HisBook_container {
         display: flex;
         justify-content: center;
-        margin-top: 20%;
+        margin: 20% 2% 0 2%;
     }
     .HisBook_container .col-sm-6 {
         width: 90%;
