done news detail page and comment

--- a/news_app/templates/news_app/saved-history-news-list.html
+++ b/news_app/templates/news_app/saved-history-news-list.html
@@ -26,7 +26,9 @@
             {% for i in history %}
                 <div class="row" style="padding: 20px 0px; margin: 0 12px;; border-top: #c1c1c1 solid 1px;">
                     <div class="col-sm-3 HisBook_item_pic">
-                        <img src="{{ i.photo }}" alt="No photo">
+                        <a href="{% url 'news_app:news_detail' i.id %}">
+                            <img src="{{ i.photo }}" alt="No photo">
+                        </a>
                     </div>
                     <div class="col-sm-9">
                         <p class="HisBook_item_title"><a href="{% url 'news_app:news_detail' i.id %}"> {% blocktranslate %}タイトル{% endblocktranslate %}: {{ i.title }}</a></p>
