--- a/news_app/templates/news_app/news-detail.html
+++ b/news_app/templates/news_app/news-detail.html
@@ -1,12 +1,11 @@
 {% extends 'main/base.html' %}
 {% load i18n %}
 {% block content %}
-<div class="row" style="margin-top: 5%;">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-8">
+<div class="news_detail_page">
+    <div class="news_wrap">
          <!--body-->
         <div class="row" style="margin-bottom: 4%;">
-            <div class="col-sm-4">
+            <div class="col-sm-4 news_detail_page_img_wrap">
                 <img src="{{news.photo}}" style="max-width: 300px;">
             </div>
             <div class="col-sm-8">
@@ -24,12 +23,12 @@
                             </div>
                         {% endif %}
                     </div>
-                    <button class="category_button" style="width: 20%; margin: 0 4%;"><a href="{{ news.url }}" style="text-decoration: none; font-size: 22px; color: #e2d9f3;">{% blocktrans %}続きを読む{% endblocktrans %}</a></button>
+                    <button class="category_button more_read_button"><a href="{{ news.url }}" style="text-decoration: none; font-size: 22px; color: #e2d9f3;">{% blocktrans %} 続きを読む {% endblocktrans %}</a></button>
                 </div>
             </div>
         </div>
 
-        <!--Comment input-->
+<!--        Comment input-->
         <div class="comment_container" style="border: none; ">
             <div class="comment_header" style="display: flex; justify-content: start;">
                 <p style="font-size: 40px; margin: 8px 10px 0 20px;">
@@ -40,12 +39,12 @@
                 <p style="font-size: 22px; margin: 26px 10px 10px 2px; font-weight: 600;">件</p>
             </div>
             <div class="comment_body">
-                <form method="post">
+                <form method="post" style="display: flex; flex-direction: column; align-items: end;">
                     {% csrf_token %}
-                    <div style="padding: 0 3% 0 3%;">
+                    <div style="padding: 0 3% 0 3%; width: 100%; ">
                         <input class="comment_input" name="comment" required="" id="id_comment" placeholder="コメントを入力してください">
                     </div>
-                    <button class="category_button" type="submit" style="margin: 1% 0 1% 15%; position: relative; left: 760px; font-size: 24px; color: #e2d9f3; width: 14%;">{% blocktrans %}　保存する {% endblocktrans %}</button>
+                    <button class="category_button" type="submit">{% blocktrans %}保存する{% endblocktrans %}</button>
                 </form>
             </div>
         </div>
@@ -61,29 +60,7 @@
         {% endfor %}
         </ul>
     </div>
-    <div class="col-sm-2"></div>
 </div>
-<!--<script>-->
-<!--    const notSave = document.querySelector('.not_save')-->
-<!--    const save = document.querySelector('.save')-->
-<!--    function Save() {-->
-<!--&lt;!&ndash;        event.preventDefault();&ndash;&gt;-->
-<!--        var notSaveDiv = document.querySelector('.not_save');-->
-<!--        var saveDiv = document.querySelector('.save');-->
 
-<!--        notSaveDiv.classList.remove('active');-->
-<!--        saveDiv.classList.add('active');-->
-<!--    }-->
-<!--    function DeleteSave() {-->
-<!--&lt;!&ndash;        event.preventDefault();&ndash;&gt;-->
-<!--        var notSaveDiv = document.querySelector('.not_save');-->
-<!--        var saveDiv = document.querySelector('.save');-->
-
-<!--        saveDiv.classList.remove('active');-->
-<!--        notSaveDiv.classList.add('active');-->
-<!--    }-->
-<!--    notSave.addEventListener('click', Save)-->
-<!--    save.addEventListener('click', DeleteSave)-->
-<!--</script>-->
 
 {% endblock %}
