--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -230,6 +230,13 @@
 }
 
 /* Comment */
+.comment_body .category_button {
+    margin: 1% 3% 1% 0;
+    position: relative;
+    font-size: 24px;
+    color: #e2d9f3;
+    width: 14%;
+}
 .comment_input {
     width: 100%;
     height: 46px;
@@ -274,9 +281,21 @@
 
 
 /* news_detail */
+.news_detail_page {
+    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+}
+.news_wrap {
+    width: 70%;
+}
 .save ,
 .not_save {
     display: block;
+}
+.more_read_button {
+    width: 20%;
+    margin: 0 4%;
 }
 /* Edit profile*/
 .container_profile {
@@ -534,6 +553,32 @@
     }
     .HisBook_item_title{
         font-size: 20px;
+    }
+    /* news detail page */
+    .news_wrap {
+        width: 86%;
+    }
+    .news_wrap img {
+        width: 100%;
+    }
+    .news_detail_page_img_wrap {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin: 70px 0 20px 0;
+    }
+    .more_read_button {
+        width: 32%;
+    }
+    more_read_button a {
+        font-size: 20px;
+        padding: 0 2px;
+    }
+    /* comment */
+    .comment_body .category_button {
+        width: 26%;
+        font-size: 20px;
+        margin: 6% 3% 1% 0;
     }
 }
 /* Ipad */
