--- a/news_app/templates/news_app/news_page.html
+++ b/news_app/templates/news_app/news_page.html
@@ -1,30 +1,29 @@
 {% extends 'main/base.html' %}
 {% block content %}
 <!--body-->
-<div class="container-fluid"  style="margin-top: 6%">
-    <div class="row" style="padding: 20px 0 0 30px;">
-        <div class="category_wrap" style=" border-right: solid 1px #545454; width: 17%; display: flex; flex-direction: column; position: fixed; left: 51px;">
+<div class="container-fluid news_page_container"  style="margin-top: 6%">
+
+
+        <div class="category_wrap">
             {% for c in categories %}
             <button class="category_button hover_color_button categories" style="margin-bottom: 20px;" url-id={{ c.category_en }}>{{ c.category }}</button>
             {% endfor %}
         </div>
-        <div class="col-sm-2" >
 
-        </div>
-        <div class="col-sm-6" style="margin-left: 10%; padding: 0; ">
+        <div class="category_wrap_mobile">
             {% for c in categories %}
-            <p class="category_title" style="font-size: 56px; text-align: center; color: #545454;">{{ c.category }}</p>
+            <button class="category_button hover_color_button categories" url-id={{ c.category_en }}>{{ c.category }}</button>
+            {% endfor %}
+        </div>
+        <div class="news_item_wrap">
+            {% for c in categories %}
+            <p class="category_title">{{ c.category }}</p>
             {% endfor %}
 
             <ul id="news-container" style="list-style: none;">
 
-
             </ul>
         </div>
-        <div class="col-sm-4">
-
-        </div>
-    </div>
 </div>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
