--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="{% static '/style.css' %}">
 </head>
 <body class="js-modal-container">
-
     <div class="container-fluid primary_color container_nav_bar">
         <div class="row ">
             <div class="col-sm-2">
@@ -99,6 +98,19 @@
                 </div>
             </div>
     </div>
+    <div class="loading_wrap">
+            <div class="loading">
+                <div style="--value: 1"></div>
+                <div style="--value: 2"></div>
+                <div style="--value: 3"></div>
+                <div style="--value: 4"></div>
+                <div style="--value: 5"></div>
+                <div style="--value: 6"></div>
+                <div style="--value: 7"></div>
+                <div style="--value: 8"></div>
+            </div>
+    </div>
+
     {% if messages %}
         {% for message in messages %}
         <div class="alert alert-{{ message.tags }} mt-4" role="alert">
