--- a/news_app/templates/news_app/categories.html
+++ b/news_app/templates/news_app/categories.html
@@ -8,20 +8,20 @@
 
         </div>
         <div class="col-sm-6">
-            <p style="font-size: 50px; text-align: center; margin: 40px 0; color: #545454">{% blocktrans %}すべてのカテゴリー{% endblocktrans %}</p>
-            <div class="row">
+            <p class="category_page_name">{% blocktrans %}すべてのカテゴリー{% endblocktrans %}</p>
+            <div class="">
                 {% for c in categories %}
                 <button class="border_radius_button hover_color_button" style="display: flex; width: 100%; height: 110px; margin-bottom: 40px; justify-content: space-between; align-items: center;">
                     <p style="font-size: 40px; margin: 0; text-align: center; width: 100%; padding-left: 50px;">{{ c.category }}</p>
                     <div class="icon_wrap">
                     {% if c not in user.followed_categories.all %}
-                        <a href="{% url 'news_app:follow' category=c.category_en %}">
+                        <a href="{% url 'news_app:follow' category=c.category_en %}" style="color: #a98fd9;">
                         <p class="category_plus icon_item" >
                             <i class="fa-solid fa-plus"></i>
                         </p>
                         </a>
                     {% else %}
-                        <a href="{% url 'news_app:unfollow' category=c.category_en %}">
+                        <a href="{% url 'news_app:unfollow' category=c.category_en %}" style="color: #a98fd9;">
                         <p class="category_minus icon_item" >
                             <i class="fa-solid fa-minus"></i>
                         </p>
