--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -3,6 +3,53 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* loading */
+.loading_wrap {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(226, 217, 243, 0.8);
+    z-index: 9;
+    display: none;
+}
+.loading {
+    margin: 80% auto;
+    position: relative;
+    width: 7rem;
+    height: 7rem;
+}
+
+.loading div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: rotate(calc(var(--value) * 45deg));
+}
+
+.loading div:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 14px;
+    height: 14px;
+    border: 4px solid #00aefd;
+    border-radius: 5rem;
+    filter: hue-rotate(calc(var(--value) * 45deg));
+    animation: loading 1s infinite;
+    animation-delay: calc(var(--value) * 0.125s);
+    animation-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+@keyframes loading {
+    to {
+        transform: scale(0);
+    }
+}
 /*header*/
 .container_nav_bar {
     position: fixed;
@@ -278,8 +325,34 @@
     padding: 1% 2%;
     margin: 2% 0 4% 0;
 }
-
-
+/* category page */
+.category_page_name {
+    font-size: 50px;
+    text-align:
+    center; margin: 40px 0;
+    color: #545454;
+}
+/* news page */
+.category_wrap {
+     border-right: solid 1px #545454;
+     width: 17%;
+     display: flex;
+     flex-direction: column;
+     position: fixed;
+     left: 51px;
+}
+.category_wrap_mobile {
+    display: none;
+}
+.news_item_wrap {
+    margin-left: 20%;
+    padding: 0 4%;
+}
+.news_item_wrap .category_title {
+    font-size: 56px;
+    text-align: center;
+    color: #545454;
+}
 /* news_detail */
 .news_detail_page {
     margin-top: 5%;
@@ -405,10 +478,8 @@
 
 /* Mobile */
 @media only screen and (max-width: 46.1875em) {
-    .login_button {
-        width: 38%;
-        height: 48px;
-    }
+    /* loading */
+
     /* head */
     .container_nav_bar {
         height: 5em;
@@ -579,6 +650,42 @@
         width: 26%;
         font-size: 20px;
         margin: 6% 3% 1% 0;
+    }
+    /* news page */
+    .category_wrap {
+        display: none;
+    }
+    .news_page_container {
+        padding: 0;
+    }
+    .category_wrap_mobile {
+        display: flex;
+        background-color: #e2d9f3;
+        box-shadow: 0 0 16px 2px #a98fd9;
+        overflow-x: auto;
+        white-space: nowrap;
+        margin: 28% 4% 6% 4%;
+    }
+    .category_wrap_mobile .category_button {
+        margin: 3% 3% 3% 3%;
+        padding: 0 2%;
+    }
+    .news_item_wrap {
+        margin: 0;
+    }
+    .news_item_wrap .news-container img{
+        margin: 6%;
+    }
+    .news_item_wrap .category_title {
+        font-size: 28px;
+    }
+    .category_wrap_mobile .category_button.active {
+        border: 1px solid #a98fd9;
+        box-shadow: 0 0 20px 0px #a98fd9;
+    }
+    /* category page*/
+    .category_page_name {
+        font-size: 244%;
     }
 }
 /* Ipad */
