--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -100,14 +100,7 @@
     </div>
     <div class="loading_wrap">
             <div class="loading">
-                <div style="--value: 1"></div>
-                <div style="--value: 2"></div>
-                <div style="--value: 3"></div>
-                <div style="--value: 4"></div>
-                <div style="--value: 5"></div>
-                <div style="--value: 6"></div>
-                <div style="--value: 7"></div>
-                <div style="--value: 8"></div>
+                <img src="{% static 'media/loading.gif' %}" alt="Animated GIF">
             </div>
     </div>
 
