--- a/news_app/templates/news_app/news-detail.html
+++ b/news_app/templates/news_app/news-detail.html
@@ -4,7 +4,7 @@
 <div class="news_detail_page">
     <div class="news_wrap">
          <!--body-->
-        <div class="row" style="margin-bottom: 4%;">
+        <div class="row" style="margin: 4% 0;">
             <div class="col-sm-4 news_detail_page_img_wrap">
                 <img src="{{news.photo}}" style="max-width: 300px;">
             </div>
