--- a/news_app/templates/news_app/news_page.html
+++ b/news_app/templates/news_app/news_page.html
@@ -2,8 +2,6 @@
 {% block content %}
 <!--body-->
 <div class="container-fluid news_page_container"  style="margin-top: 6%">
-
-
         <div class="category_wrap">
             {% for c in categories %}
             <button class="category_button hover_color_button categories" style="margin-bottom: 20px;" url-id={{ c.category_en }}>{{ c.category }}</button>
@@ -20,7 +18,7 @@
             <p class="category_title">{{ c.category }}</p>
             {% endfor %}
 
-            <ul id="news-container" style="list-style: none;">
+            <ul class="" id="news-container" style="list-style: none;">
 
             </ul>
         </div>
