--- a/news_app/templates/news_app/news_page.html
+++ b/news_app/templates/news_app/news_page.html
@@ -41,7 +41,7 @@
 
                         const news = data.news;
 
-                        const newsContainer = document.getElementById("news-container"); // Changed getElementsById to getElementById
+                        const newsContainer = document.getElementById("news-container");
 
                         newsContainer.innerHTML = "";
 
