minor bug fixed

--- a/news_app/templates/news_app/home.html
+++ b/news_app/templates/news_app/home.html
@@ -18,7 +18,7 @@
                 </a>
             {% endfor %}
             <div class="col-sm-3 wrap_plus_button_mobile">
-                <a href="{% url 'news_app:news' %}?category={{ c.category_en }}" style="text-decoration: none">
+                <a href="{% url 'news_app:categories' %}" style="text-decoration: none">
                 <button class="hover_color_button primary_color plus_button">
                     <i class="fa-solid fa-plus plus_icon"></i>
                 </button>
