--- a/main/templates/main/error.html
+++ b/main/templates/main/error.html
@@ -3,45 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Error</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-        .error-container {
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 0 100px 8px #a98fd9;
-            max-width: 400px;
-            width: 100%;
-            text-align: center;
-        }
-        .error-icon {
-            color: #f00;
-            font-size: 48px;
-        }
-        .error-message {
-            color: #333;
-            font-size: 18px;
-            font-weight: 600;
-            margin-top: 10px;
-        }
-    </style>
+    {% load static %}
+    <link rel="stylesheet" href="{% static '/style.css' %}">
 </head>
-<body>
+<body class="ErrorBody">
     <div class="error-container">
         <div class="error-icon">!</div>
         <div class="error-message">
             <p>このアクションの実行中にエラーが発生しました。</p>
             <p>後で再試行してください。</p>
+            <button class="ComeBackButton" onclick="goBack()">戻る</button>
         </div>
     </div>
 </body>
+<script>
+    function goBack() {
+      window.history.back();
+    }
+  </script>
 </html>
-has context menu
