--- a/user/templates/user/change-pass.html
+++ b/user/templates/user/change-pass.html
@@ -7,18 +7,34 @@
 <div class="row" style="margin-top: 6%">
     <div class="col-sm-4"></div>
     <div class="col-sm-4 login_container" style="padding: 2%; border: none">
-        <form method="post">
+        <form method="post" id="password-form">
             {% csrf_token %}
             <label for="{{ form.password.id_for_label }}" class="label_form">{% blocktrans %}パスワード{% endblocktrans %}</label>
-                <br>
+            <br>
             <input type="password" name="{{ form.password.name }}" id="{{ form.password.id_for_label }}" class="input_form"/>
+            <div id="error-password" class="alert alert-danger" style="display: none; padding: 6px 10px; font-size: 12px;" role="alert">
+                {% blocktrans %}パスワードを入力してください{% endblocktrans %}
+            </div>
             <div style="display: flex; justify-content: center; margin-top: 4%;">
-                <button class="category_button hover_color_button"  type="submit" style="width: 30%">{% blocktrans %}次へ{% endblocktrans %}</button>
+                <button class="category_button hover_color_button" type="button" onclick="validateForm()" style="width: 30%">{% blocktrans %}次へ{% endblocktrans %}</button>
             </div>
         </form>
     </div>
-    <div class="col-sm-4">
-
-    </div>
+    <div class="col-sm-4"></div>
 </div>
+    <script>
+        function validateForm() {
+            var passwordValue = document.querySelector('#{{ form.password.id_for_label }}').value;
+
+            document.getElementById('error-password').style.display = 'none';
+
+            if (!passwordValue) {
+                document.getElementById('error-password').style.display = 'block';
+            }
+            if (passwordValue) {
+                document.getElementById('password-form').submit();
+            }
+        }
+    </script>
+
 {% endblock content %}
