--- a/user/templates/user/code-verify.html
+++ b/user/templates/user/code-verify.html
@@ -10,22 +10,18 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
-{% if messages %}
-        {% for message in messages %}
-        <div class="alert alert-{{ message.tags }} mt-4" role="alert">
-            {{ message }}
-        </div>
-        {% endfor %}
-    {% endif %}
 <div class="row" style="margin-top: 6%">
     <div class="col-sm-4">
     </div>
     <div class="col-sm-4 login_container" style="padding: 2%; border: none">
-        <form method="post">
+        <form method="post" id="code-verify">
             {% csrf_token %}
             <label for="{{ form.code.id_for_label }}" class="label_form">{% blocktrans %}コード{% endblocktrans %}</label>
-                <br>
+            <br>
             <input type="text" name="{{ form.code.name }}" id="{{ form.code.id_for_label }}" class="input_form"/>
+            <div id="error-message" class="alert alert-danger" style="display: none; padding: 6px 10px; font-size: 12px;" role="alert">
+                {% blocktrans %}コードは必須項目です。{% endblocktrans %}
+            </div>
             <div style="display: flex; justify-content: space-between; margin-top: 4%;">
                 <p><a href="{% url 'user:resend_code' %}" style="font-size: 16px;">{% blocktrans %}コードをもう一度送信{% endblocktrans %}</a></p>
                 <button class="category_button hover_color_button"  type="submit" style="width: 30%">{% blocktrans %}次へ{% endblocktrans %}</button>
@@ -36,5 +32,17 @@
 
     </div>
 </div>
+
+<script>
+document.getElementById('code-verify').addEventListener('submit', function(event) {
+    var codeValue = document.querySelector('#{{ form.code.id_for_label }}').value;
+
+    if (!codeValue) {
+        document.getElementById('error-message').style.display = 'block';
+        event.preventDefault();
+    }
+});
+</script>
+
 </body>
 </html>
