--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -11,30 +11,23 @@
     <link rel="stylesheet" href="{% static '/style.css' %}">
 </head>
 <body>
-{% if messages %}
-    {% for message in messages %}
-    <div class="alert alert-{{ message.tags }} mt-4" role="alert">
-        {{ message }}
-    </div>
-    {% endfor %}
-{% endif %}
 <div class="row login_wrap">
     <div class="col-sm-4">
 
     </div>
     <div class="col-sm-4 login_container">
         <p class="login_label">{% blocktrans %}ログイン{% endblocktrans %}</p>
-        <form method="post">
+        <form method="post" id="login-form">
             {% csrf_token %}
             <label for="{{ form.email.id_for_label }}" class="label_form">{% blocktrans %}メールアドレス{% endblocktrans %}</label>
-                <br>
-            <input type="text" name="{{ form.email.name }}" id="{{ form.email.id_for_label }}" class="input_form"/>
+            <br>
+            <input type="text" name="{{ form.email.name }}" id="{{ form.email.id_for_label }}" class="input_form" required />
             <br>
             <label for="{{ form.password.id_for_label }}" class="label_form">{% blocktrans %}パスワード{% endblocktrans %}</label>
-                <br>
-            <input type="password" name="{{ form.password.name }}" id="{{ form.password.id_for_label }}" class="input_form"/>
+            <br>
+            <input type="password" name="{{ form.password.name }}" id="{{ form.password.id_for_label }}" class="input_form" required />
             <div style="display: flex; justify-content: center; margin-top: 4%;">
-                <button class="category_button hover_color_button login_button"  type="submit">{% blocktrans %}ログイン{% endblocktrans %}</button>
+                <button class="category_button hover_color_button login_button" type="submit">{% blocktrans %}ログイン{% endblocktrans %}</button>
             </div>
             <div style="display: flex; justify-content: center; margin-top: 8%;">
                 <p><a href="{% url 'user:email_confirm' %}">{% blocktrans %}無料会員{% endblocktrans %}</a> / <a href="{% url 'user:email_confirm' %}">{% blocktrans %}パスワードを忘れた方{% endblocktrans %}</a></p>
@@ -45,5 +38,16 @@
 
     </div>
 </div>
+<script>
+document.getElementById('login-form').addEventListener('submit', function(event) {
+    var emailValue = document.querySelector('#{{ form.email.id_for_label }}').value;
+    var passwordValue = document.querySelector('#{{ form.password.id_for_label }}').value;
+
+    if (!emailValue || !passwordValue) {
+        document.getElementById('error-message').style.display = 'block';
+        event.preventDefault();
+    }
+});
+</script>
 </body>
 </html>
