--- a/static/style.css
+++ b/static/style.css
@@ -124,7 +124,71 @@
     border-style: solid;
     border-color: transparent transparent #e2d9f3 transparent;
 }
-
+.wiki_container {
+    position: fixed;
+    bottom: 6%;
+}
+.wiki_button {
+    font-size: 34px;
+    background-color: #a98fd9;
+    padding: 0 10px;
+    z-index: 9;
+    border-top-right-radius: 16px;
+    border-bottom-left-radius: 16px;
+}
+.wiki_button i {
+    color: white;
+}
+.chat_box_container {
+    width: 17%;
+    position: fixed;
+    right: 5%;
+    height: 47%;
+    bottom: 9%;
+    background-color: #a98fd9;
+    border-radius: 8px;
+    display: none;
+}
+.chat_box_container.open{
+    display: block;
+}
+.chat_box_body {
+    background-color: #e2d9f3;
+    width: 100%;
+    height: 86%;
+    margin-bottom: 8px;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+}
+.chat_box_food {
+    display: flex;
+}
+.chat_box_input {
+    border-top-right-radius: 16px;
+    border-bottom-left-radius: 16px;
+    background-color: #e2d9f3;
+    padding: 0 0 0 10px;
+    border: none;
+    font-size: 14px;
+    flex: 9;
+    margin: 0 0 0 10px;
+}
+.chat_box_input:focus {
+    outline:none
+}
+.submit_button {
+    font-size: 24px;
+    padding: 0 7px 0 11px;
+    border-top-right-radius: 14px;
+    border-bottom-left-radius: 14px;
+    border: none;
+    flex: 1;
+    margin: 0 10px 0 10px;
+    background-color: #e2d9f3;
+}
+.submit_button i{
+    color: #a98fd9;
+}
 
 /*home body*/
 .primary_color {
@@ -341,7 +405,6 @@
 /* category page */
 .category_page_name {
     font-size: 50px;
-    text-align:
     center; margin: 40px 0;
     color: #545454;
 }
