minor bug fixed

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -82,14 +82,14 @@
                         <p><a class="option_item" href="{% url 'user:email_confirm' %}">{% blocktrans %}サインイン{% endblocktrans %}</a></p>
                     </div>
                 {% endif %}
-                <div class="wiki_container">
-                    <div class="wiki_button">
-                        <i class="fa-regular fa-comment-dots fa-flip-horizontal"></i>
-                    </div>
-                    <div class="chat_box_container">
-                        <div class="chat_box_body" id="messages">
+<!--                <div class="wiki_container">-->
+<!--                    <div class="wiki_button">-->
+<!--                        <i class="fa-regular fa-comment-dots fa-flip-horizontal"></i>-->
+<!--                    </div>-->
+<!--                    <div class="chat_box_container">-->
+<!--                        <div class="chat_box_body" id="messages">-->
 
-                        </div>
+<!--                        </div>-->
 <!--                        <div class="chat_box_food">-->
 <!--                            <form id="form" class="chat_box_food">-->
 <!--                                <input id="keyword" class="chat_box_input" placeholder="Enter a keyword">-->
@@ -101,8 +101,8 @@
 <!--&lt;!&ndash;                                <i class="fa-solid fa-paper-plane fa-flip-horizontal"></i>&ndash;&gt;-->
 <!--&lt;!&ndash;                            </button>&ndash;&gt;-->
 <!--                        </div>-->
-                    </div>
-                </div>
+<!--                    </div>-->
+<!--                </div>-->
 
             </div>
         </div>
